formulario com atualizado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div style="background-image: url('./src/assets/backgroundvector.svg')"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
